cigionline/static/themes/space_series/css/_article_series_page.scss
body {
  &.space-series-article-series {
    @include media-breakpoint-up(lg) {
      height: 100vh;
    }
    @include top-bar($background-color: transparent, $color: $white);
    background-color: $space-series-background-colour;
    color: $white;
    font-family: $space-series-font-secondary;
    padding-top: 6em;

    .space-series-article-series-hero {
      .hero-content {
        .opinion-series-label {
          color: $cigi-medium-grey;
          font-weight: 500;
          margin-bottom: 1em;
        }

        .title {
          @include media-breakpoint-up(lg) {
            font-size: 2.25em;
          }
          font-family: $space-series-font-primary;
          font-size: calc(3vw + 1em);
          font-weight: 600;
          line-height: 1;
          text-transform: uppercase;
        }

        .subtitle {
          font-weight: 500;
        }

        .short-description {
          font-size: 0.8em;
        }
      }
    }

    .in-the-series {
      overflow: hidden;

      .swiper {
        @include media-breakpoint-down(xs) {
          padding-left: 0;
          padding-right: 0;
        }
        margin-top: 2em;
        position: relative;

        .swiper-container-series {
          @include media-breakpoint-down(md) {
            padding: 0;
          }
          border-top: 1px solid $cigi-text-grey;
          overflow-x: clip;
          overflow-y: visible;
          padding: 1em 0;

          .swiper-wrapper {
            @include media-breakpoint-down(md) {
              flex-direction: column;
            }

            .category-title {
              background-color: $space-series-background-colour;
              border-left: 1px solid $cigi-text-grey;
              font-size: 0.9em;
              font-weight: 600;
              height: 3em;
              left: -1px;
              padding: 0 0.5em;
              position: absolute;
              text-transform: uppercase;
              top: -1.85em;
              white-space: nowrap;
            }
          }
        }

        article {
          @include media-breakpoint-up(lg) {
            border-right: 1px solid $cigi-text-grey;
            border-top: 0;
            flex-direction: column;
          }
          align-items: center;
          background-color: $space-series-background-colour;
          border-top: 1px solid $cigi-text-grey;
          display: flex;
          height: auto;
          overflow: hidden;
          position: relative;
          transition: transform 0.2s ease, opacity 0.3s ease;
          z-index: 0;

          &::before {
            content: '';
            height: 100%;
            left: 0;
            position: absolute;
            top: 0;
            transition: box-shadow 0.2s ease;
            width: 100%;
            z-index: -1;
          }

          &.after {
            &::after {
              background-color: $space-series-background-colour;
              content: '';
              height: 20px;
              left: -16px;
              position: absolute;
              top: -25px;
              width: 15px;
            }
          }

          &:last-child {
            @include media-breakpoint-up(lg) {
              border-bottom: 0;
              border-right: 1px solid $cigi-text-grey;
            }
            border-bottom: 1px solid $cigi-text-grey;
          }

          &:not(.swiper-slide-visible) {
            @include media-breakpoint-up(lg) {
              opacity: 0;
            }
          }

          &.swiper-slide-visible {
            @include media-breakpoint-up(lg) {
              border-left: 1px solid $cigi-text-grey;
            }

            & ~ .swiper-slide-visible {
              @include media-breakpoint-up(lg) {
                border-left: 0;
              }
            }
          }

          .article-content {
            display: flex;
            flex-direction: column;

            &:hover {
              transform: scale(1.025);
              z-index: 1;

              .series-item-image {
                .play-icon {
                  color: $white;

                  .inner-circle {
                    background-color: transparent;
                  }
                }
              }
            }
          }

          .series-item-image {
            @include media-breakpoint-up(lg) {
              width: auto;
            }
            align-items: center;
            display: flex;
            flex-shrink: 0;
            justify-content: center;
            position: relative;
            width: 100px;
          }

          .series-item-content {
            @include link($color: $white, $hover-color: $cigi-primary-colour);
            @include media-breakpoint-up(sm) {
              margin-left: 3em;
            }
            @include media-breakpoint-up(lg) {
              margin-left: 0;
              margin-top: 8em;
            }
            display: flex;
            flex-direction: column;
            font-size: 0.8em;
            height: 100%;
            justify-content: space-between;
            margin-left: 2em;
            padding: 0.5em;

            .series-item-counter {
              @include media-breakpoint-up(lg) {
                display: flex;
              }
              display: none;

              span {
                font-family: $space-series-font-primary;
                font-weight: 600;

                &:first-child {
                  margin-right: 0.5em;
                  position: relative;
                  width: 100%;

                  &::before {
                    background-color: $white;
                    bottom: 7px;
                    content: '';
                    height: 3px;
                    position: absolute;
                    width: 100%;
                  }
                }
              }

              .play-icon {
                align-items: center;
                color: $white;
                display: flex;
                justify-content: center;
                margin-bottom: 9px;
                margin-left: 5px;
                transition: color 0.2s ease;
                width: 23px;

                * {
                  position: absolute;
                  transition: background-color 0.2s ease;
                }

                .inner-circle {
                  background-color: $black;
                  border-radius: 50%;
                  border-width: 3px;
                  height: 18px;
                  width: 18px;
                  z-index: 3;
                }

                .outer-circle {
                  border: 3px solid $white;
                  border-radius: 50%;
                  height: 23px;
                  width: 23px;
                  z-index: 1;
                }

                i {
                  font-size: 0.7em;
                  z-index: 4;
                }
              }
            }

            .series-item-title {
              font-size: 1em;
            }

            .authors {
              font-size: 0.8em;
              margin: 1em 0 0;
              text-transform: uppercase;
            }
          }
        }

        .swiper-button {
          @include media-breakpoint-down(md) {
            display: none;
          }
          color: $white;
          height: 100%;
          top: 2em;
          transition: color 0.3s ease, opacity 0.3s ease;
          width: 75px;

          &:hover {
            color: $cigi-primary-colour;
          }

          &::before {
            bottom: 35%;
            content: 'MORE';
            position: absolute;
          }

          &.swiper-button-prev {
            left: -50px;
          }

          &.swiper-button-next {
            right: -50px;
          }

          &.swiper-button-disabled {
            opacity: 0;
          }
        }
      }
    }
  }
}

